--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1> a site about special trains </h1>
     <p> WOOOO trains!!!!!!! </p>
-
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/PB15_448_Steam.jpg/1280px-PB15_448_Steam.jpg" alt="train">
     <p> github suggested the name special-trains</p>
   </body>
 </html>
