--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
   </head>
   <body>
-    <h1> a site about special trains </h1>
+    <h1> a site about trains </h1>
     <p> WOOOO trains!!!!!!! </p>
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/PB15_448_Steam.jpg/1280px-PB15_448_Steam.jpg" alt="train">
-    <p> github suggested the name special-trains</p>
+    <p> github suggested the name special-train for the repo name</p>
   </body>
 </html>
